<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_builds"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/nav_builds" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_profil_black_24dp"
            android:title="@string/nav_profil" />
        <item
            android:id="@+id/nav_bans"
            android:icon="@drawable/ic_bans_black_24dp"
            android:title="@string/nav_bans" />
        <item
            android:id="@+id/nav_wiki"
            android:icon="@drawable/ic_dictionary_black_24dp"
            android:title="@string/nav_wiki" />
    </group>

    <item android:title="@string/nav_group_about">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/nav_feedback" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_privacy_black_24dp"
                android:title="@string/nav_policy_licence" />
        </menu>
    </item>

</menu>
