<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_component_s"
        android:layout_marginTop="@dimen/margin_component_s"
        android:text="@string/attack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ProgressBar
        android:id="@+id/pb_attack"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@android:color/holo_red_dark"
        android:layout_marginStart="@dimen/margin_component_s"
        android:layout_marginTop="@dimen/margin_component_xs"
        android:layout_marginEnd="@dimen/margin_component_s" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_component_s"
        android:layout_marginTop="@dimen/margin_component_s"
        android:text="@string/defense" />

    <ProgressBar
        android:id="@+id/pb_defense"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@android:color/holo_green_dark"
        android:layout_marginStart="@dimen/margin_component_s"
        android:layout_marginTop="@dimen/margin_component_xs"
        android:layout_marginEnd="@dimen/margin_component_s" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_component_s"
        android:layout_marginTop="@dimen/margin_component_s"
        android:text="@string/magic" />

    <ProgressBar
        android:id="@+id/pb_magic"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@android:color/holo_blue_dark"
        android:layout_marginStart="@dimen/margin_component_s"
        android:layout_marginTop="@dimen/margin_component_xs"
        android:layout_marginEnd="@dimen/margin_component_s" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_component_s"
        android:layout_marginTop="@dimen/margin_component_s"
        android:text="@string/difficulty" />

    <ProgressBar
        android:id="@+id/pb_difficulty"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@android:color/holo_purple"
        android:layout_marginStart="@dimen/margin_component_s"
        android:layout_marginTop="@dimen/margin_component_xs"
        android:layout_marginEnd="@dimen/margin_component_s" />

</LinearLayout>